Fix Poster alignment in Home and Movies

--- a/src/Views/Home/Home.sass
+++ b/src/Views/Home/Home.sass
@@ -87,10 +87,11 @@
   border-left: 2px solid v.$yellow-0
   width: 87%
   margin: 0 auto
+  padding-left: 3%
 
 .section-separation
   border-bottom: 1px solid #484a4f
-  margin: 2% 3% 1% 3%
+  margin: 2% 3% 1% 0
 
   &__title
     font-size: 2.2rem
@@ -105,18 +106,21 @@
 // Media Poster for Movies and TV-Shows
 .poster-list-container
   border-radius: 3px
-  padding: 1.4%
-  margin: 0 3%
+  // display: flex
+  // flex-wrap: wrap
+  // gap: 1.7em
   display: grid
   grid-template-columns: repeat(7, 1fr)
   grid-gap: 5.2rem 1.7rem
+
+  // &__item
+  //   flex-grow: 2
 
   a
     color: inherit
     text-decoration: none
 
 .trending-people-container
-  margin: 0 3%
   display: grid
   grid-template-columns: repeat(10, 1fr)
   
@@ -136,6 +140,7 @@
   margin-top: 1rem
   display: flex
   flex-wrap: wrap
+  gap: 1.7em
 
   .similar-media__item
     text-decoration: none
